sort.pancake.GatesPancake.scala.error
Erreur de compilation :
GatesPancake:19: error: Boolean.type does not take parameters
def estLibre(rang:Int) = Boolean{
                                ^GatesPancake:39: error: not found: value tp
  for (i <- tp getTaillePile()-1){
            ^GatesPancake:39: error: value - is not a member of Unit
  for (i <- tp getTaillePile()-1){
                              ^GatesPancake:91: error: method casG is defined twice
  conflicting symbols both originated in file 'plm.runtime94.GatesPancake'
def casG():Boolean{
    ^GatesPancake:75: error: method casE is defined twice
  conflicting symbols both originated in file 'plm.runtime94.GatesPancake'
def casE():Boolean{
    ^